제품별 판매 기록 조회개발 완료